some modification for klibc

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_PROG_CC
 AC_STDC_HEADERS
 
 if test "x$GCC" = "xyes"; then
-        GCC_FLAGS="-g -Wall"
+        GCC_FLAGS="-Wall"
 fi
 
 AC_SUBST(GCC_FLAGS)
