EXTRA_DIST restored in Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,5 +5,7 @@ AM_CFLAGS = $(GCC_FLAGS)
 kexecboot_SOURCES = xpm.c hash.c util.c devicescan.c fb.c kexecboot.c \
 	fstype/fstype.c
 
+EXTRA_DIST = res/make-image-header.sh
+
 MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub configure \
 	depcomp install-sh ltmain.sh Makefile.in missing config.h.in
