Major refactoring of device scanning and config files parsing code.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,8 +2,8 @@ bin_PROGRAMS=kexecboot
 
 AM_CFLAGS = $(GCC_FLAGS)
 
-kexecboot_SOURCES = xpm.c hash.c util.c devicescan.c fb.c kexecboot.c \
-	configparser.c fstype/fstype.c
+kexecboot_SOURCES = xpm.c util.c devicescan.c fb.c kexecboot.c \
+	cfgparser.c fstype/fstype.c
 
 EXTRA_DIST = res/make-image-header.sh
 
