--- a/boot.cfg
+++ b/boot.cfg
@@ -1,43 +1,45 @@
 #
 # kexecboot configuration file
+# Copyright (c) 2009 Yuri Bushmelev
 # Copyright (C) 2009 Omegamoon
 #
 
-##########
-#
-# Global settings have effect on the general working
-#
+### Global settings affects kexecboot behaviour in common
 
-#
-# Autoboot functionality. Automatically boot default 
-# image after TIMEOUT seconds. Setting TIMEOUT=0 disables 
-# the autostart functionality
+# Autoboot functionality. Automatically boot default
+# partition after TIMEOUT seconds.
+# Default: 0 (disabled)
 # Syntax: TIMEOUT=<seconds>
-TIMEOUT=4
+TIMEOUT=5
 
-# 
-# User interface - Graphical or textmodus
-# Only one of the two options can be used. 
-# Default is GUI
-# Syntax: GUI / NOGUI 
-GUI
+# User interface - graphical (GUI) or text (TEXTUI).
+# Default: GUI.
+# Syntax: UI=<GUI|TEXTUI>
+UI=GUI
 
-#
-# Customized bootlogo
-# On default the build-in kexecboot logo is shown
-# Syntax: LOGO=<path-to-logo> 
+# Debug mode
+# Default: ON (this should be switched to OFF before release)
+# Syntax: DEBUG=<ON|OFF>
+DEBUG=ON
 
-#
-# Debug modus
-# Currently debug modus is always enabled
-# Syntax:DEBUG=<ON|OFF>
+### Local settings affects this partition only
 
-#########
-#
-# Local settings apply to the image on this partition only
-#
+# Treat this partition as default.
 DEFAULT
-KERNEL=/homer/test/special-kexecboot-kernel.img
+
+# Show this label in kexecboot menu.
 LABEL=Zubuntu RC2 (Jaunty)
-APPEND=some-kernel-parameter
-ORDER=1
+
+# Specify full path to the kernel.
+KERNEL=/homer/test/some-special-kernel-2.6.xx
+
+# Append this tags to the kernel cmdline.
+APPEND=logo.nologo debug
+
+# Specify full path to the partition's icon.
+ICON=/homer/test/special-icon.xpm
+
+# Priority of item in kexecboot menu.
+# Items with highest priority shown at top of menu.
+# Default: 0 (lowest, ordered by device ordering)
+PRIORITY=1
