boot.cfg was sanitized. Some broken/unwanted options was removed.

--- a/boot.cfg
+++ b/boot.cfg
@@ -1,45 +1,23 @@
 #
 # kexecboot configuration file
 # Copyright (c) 2009 Yuri Bushmelev
-# Copyright (C) 2009 Omegamoon
+# Copyright (c) 2009 Omegamoon
 #
 
-### Global settings affects kexecboot behaviour in common
-
-# Autoboot functionality. Automatically boot default
-# partition after TIMEOUT seconds.
-# Default: 0 (disabled)
-# Syntax: TIMEOUT=<seconds>
-TIMEOUT=5
-
-# User interface - graphical (GUI) or text (TEXTUI).
-# Default: GUI.
-# Syntax: UI=<GUI|TEXTUI>
-UI=GUI
-
-# Debug mode
-# Default: ON (this should be switched to OFF before release)
-# Syntax: DEBUG=<ON|OFF>
-DEBUG=ON
-
-### Local settings affects this partition only
-
-# Treat this partition as default.
-DEFAULT
-
 # Show this label in kexecboot menu.
-LABEL=Zubuntu RC2 (Jaunty)
+#LABEL=My own image
 
 # Specify full path to the kernel.
-KERNEL=/homer/test/some-special-kernel-2.6.xx
+#KERNEL=/boot/my-own-kernel
 
 # Append this tags to the kernel cmdline.
-APPEND=logo.nologo debug
+#APPEND=logo.nologo debug
 
-# Specify full path to the partition's icon.
-ICON=/homer/test/special-icon.xpm
+# Specify full path to the custom icon
+# that will be shown in kexecboot menu.
+#ICON=/boot/my-own-icon.xpm
 
 # Priority of item in kexecboot menu.
-# Items with highest priority shown at top of menu.
+# Items with highest priority will be shown at top of menu.
 # Default: 0 (lowest, ordered by device ordering)
-PRIORITY=1
+#PRIORITY=10
