Added support for using uImage kernels. Now you can enable/disable using uImage/zImage/machine kernels from configure script.

--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,9 @@ AC_ARG_WITH([fbmenu],[AS_HELP_STRING([--with-fbmenu],[support framebuffer menu @
 AC_ARG_WITH([cfgfiles],[AS_HELP_STRING([--with-cfgfiles],[support config files @<:@default=yes@:>@])],[],[with_cfgfiles=yes])
 AC_ARG_WITH([icons],[AS_HELP_STRING([--with-icons],[support custom icons (depends on fbmenu) @<:@default=yes@:>@])],[],[with_icons=yes])
 AC_ARG_WITH([zaurus],[AS_HELP_STRING([--with-zaurus],[compile Sharp Zaurus specific code @<:@default=no@:>@])],[],[with_zaurus=no])
+AC_ARG_WITH([zimage],[AS_HELP_STRING([--with-zimage],[compile with zImage support @<:@default=yes@:>@])],[],[with_zimage=yes])
+AC_ARG_WITH([uimage],[AS_HELP_STRING([--with-uimage],[compile with uImage support @<:@default=no@:>@])],[],[with_uimage=no])
+AC_ARG_WITH([machine-kernel],[AS_HELP_STRING([--with-machine-kernel],[enable looking for machine-specific zImage kernel @<:@default=no@:>@])],[],[with_machine_kernel=no])
 AC_ARG_ENABLE([devices-recreating],[AS_HELP_STRING([--enable-devices-recreating],[enable devices re-creating @<:@default=yes@:>@])], [],[enable_devices_recreating=\"yes\"])
 AC_ARG_ENABLE([debug],[AS_HELP_STRING([--enable-debug],[enable debug output @<:@default=no@:>@])], [],[enable_debug=\"no\"])
 AC_ARG_ENABLE([host-debug],[AS_HELP_STRING([--enable-host-debug],[allow for non-destructive executing of kexecboot on host system@<:@default=no@:>@])], [],[enable_host_debug=\"no\"])
@@ -51,6 +54,21 @@ AS_IF([test "x$enable_host_debug" = xyes],
 AS_IF([test "x$with_zaurus" = xyes],
 		[
 		AC_DEFINE([USE_ZAURUS], [1], [Define if you wish to compile Sharp Zaurus specific code])
+		], [])
+
+AS_IF([test "x$with_zimage" = xyes],
+		[
+		AC_DEFINE([USE_ZIMAGE], [1], [Define if you wish to compile zImage kernel support])
+		], [])
+
+AS_IF([test "x$with_uimage" = xyes],
+		[
+		AC_DEFINE([USE_UIMAGE], [1], [Define if you wish to compile uImage kernel support])
+		], [])
+
+AS_IF([test "x$with_machine_kernel" = xyes],
+		[
+		AC_DEFINE([USE_MACHINE_KERNEL], [1], [Define if you wish to enable looking for machine-specific zImage kernel])
 		], [])
 
 AC_ISC_POSIX
