Support for kexec's --initrd option implemented. You can use INITRD option in boot.cfg to specify initial ramdisk file.

--- a/boot.cfg
+++ b/boot.cfg
@@ -13,6 +13,9 @@
 # Append this tags to the kernel cmdline.
 #APPEND=logo.nologo debug
 
+# Use this initrd file
+#INITRD=/boot/my-own-initrd
+
 # Specify full path to the custom icon
 # that will be shown in kexecboot menu.
 #ICON=/boot/my-own-icon.xpm
