Functions to work on rgb color notation are moved to rgb module. Common structures are renamed (xmp_color_t -> rgb_color). fb_draw_xpm_image() moved to xpm module. Re-enabled original storage method in rgbtab.h to minimize memory consumption.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ bin_PROGRAMS=kexecboot
 AM_CFLAGS = $(GCC_FLAGS)
 
 kexecboot_SOURCES = cfgparser.c devicescan.c fb.c fstype/fstype.c gui.c \
-	kexecboot.c menu.c util.c xpm.c machine/zaurus.c
+	kexecboot.c menu.c util.c xpm.c rgb.c machine/zaurus.c
 
 EXTRA_DIST = res/make-image-header.sh
 
