Move evdev's handling functions into separate file

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,10 +2,8 @@ bin_PROGRAMS=kexecboot
 
 AM_CFLAGS = $(GCC_FLAGS)
 
-kexecboot_SOURCES = cfgparser.c devicescan.c fb.c fstype/fstype.c gui.c \
-	kexecboot.c menu.c util.c xpm.c rgb.c machine/zaurus.c
-
-EXTRA_DIST = res/make-image-header.sh
+kexecboot_SOURCES = util.c cfgparser.c devicescan.c evdevs.c fb.c gui.c \
+	 menu.c xpm.c rgb.c kexecboot.c fstype/fstype.c machine/zaurus.c
 
 MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub configure \
 	depcomp install-sh ltmain.sh Makefile.in missing config.h.in
