--- a/configure.ac
+++ b/configure.ac
@@ -1,28 +1,28 @@
 AC_PREREQ(2.53)
-AC_INIT([kexecboot], [0.5], [thommycheck@gmx.de])
+AC_INIT([kexecboot], [0.5.8], [kexecboot-devel@linuxtogo.org])
 AM_INIT_AUTOMAKE([-Wall foreign])
 AC_CONFIG_SRCDIR(kexecboot.c)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
-AC_ARG_WITH([static-linking],[AS_HELP_STRING([--with-static-linking],[compiles kexecboot as a static executable @<:@default=no@:>@])],[],[with_static_linking=no])
-AC_ARG_WITH([fbmenu],[AS_HELP_STRING([--with-fbmenu],[support framebuffer menu @<:@default=yes@:>@])],[],[with_fbmenu=yes])
-AC_ARG_WITH([cfgfiles],[AS_HELP_STRING([--with-cfgfiles],[support config files @<:@default=yes@:>@])],[],[with_cfgfiles=yes])
-AC_ARG_WITH([icons],[AS_HELP_STRING([--with-icons],[support custom icons (depends on fbmenu) @<:@default=yes@:>@])],[],[with_icons=yes])
-AC_ARG_WITH([zaurus],[AS_HELP_STRING([--with-zaurus],[compile Sharp Zaurus specific code @<:@default=no@:>@])],[],[with_zaurus=no])
-AC_ARG_WITH([zimage],[AS_HELP_STRING([--with-zimage],[compile with zImage support @<:@default=yes@:>@])],[],[with_zimage=yes])
-AC_ARG_WITH([uimage],[AS_HELP_STRING([--with-uimage],[compile with uImage support @<:@default=no@:>@])],[],[with_uimage=no])
-AC_ARG_WITH([machine-kernel],[AS_HELP_STRING([--with-machine-kernel],[enable looking for machine-specific zImage kernel @<:@default=no@:>@])],[],[with_machine_kernel=no])
+AC_ARG_ENABLE([static-linking],[AS_HELP_STRING([--enable-static-linking],[compiles kexecboot as a static executable @<:@default=no@:>@])],[],[enable_static_linking=no])
+AC_ARG_ENABLE([fbui],[AS_HELP_STRING([--enable-fbui],[support framebuffer user interface @<:@default=yes@:>@])],[],[enable_fbui=yes])
+AC_ARG_ENABLE([cfgfiles],[AS_HELP_STRING([--enable-cfgfiles],[support config files @<:@default=yes@:>@])],[],[enable_cfgfiles=yes])
+AC_ARG_ENABLE([icons],[AS_HELP_STRING([--enable-icons],[support custom icons (depends on fbui) @<:@default=yes@:>@])],[],[enable_icons=yes])
+AC_ARG_ENABLE([zaurus],[AS_HELP_STRING([--enable-zaurus],[compile Sharp Zaurus specific code @<:@default=no@:>@])],[],[enable_zaurus=no])
+AC_ARG_ENABLE([zimage],[AS_HELP_STRING([--enable-zimage],[compile with zImage support @<:@default=yes@:>@])],[],[enable_zimage=yes])
+AC_ARG_ENABLE([uimage],[AS_HELP_STRING([--enable-uimage],[compile with uImage support @<:@default=no@:>@])],[],[enable_uimage=no])
+AC_ARG_ENABLE([machine-kernel],[AS_HELP_STRING([--enable-machine-kernel],[enable looking for machine-specific zImage kernel @<:@default=no@:>@])],[],[enable_machine_kernel=no])
 AC_ARG_ENABLE([devices-recreating],[AS_HELP_STRING([--enable-devices-recreating],[enable devices re-creating @<:@default=yes@:>@])], [],[enable_devices_recreating=yes])
 AC_ARG_ENABLE([debug],[AS_HELP_STRING([--enable-debug],[enable debug output @<:@default=no@:>@])], [],[enable_debug=\"no\"])
-AC_ARG_ENABLE([host-debug],[AS_HELP_STRING([--enable-host-debug],[allow for non-destructive executing of kexecboot on host system@<:@default=no@:>@])], [],[enable_host_debug=no])
-AC_ARG_ENABLE([bg-buffer],[AS_HELP_STRING([--enable-bg-buffer],[enable special buffer to hold pre-drawed FB GUI background@<:@default=no@:>@])], [],[enable_bg_buffer=no])
+AC_ARG_ENABLE([host-debug],[AS_HELP_STRING([--enable-host-debug],[allow for non-destructive executing of kexecboot on host system @<:@default=no@:>@])], [],[enable_host_debug=no])
+AC_ARG_ENABLE([bg-buffer],[AS_HELP_STRING([--enable-bg-buffer],[enable special buffer to hold pre-drawed FB GUI background @<:@default=no@:>@])], [],[enable_bg_buffer=no])
 
-AC_ARG_ENABLE([timeout],[AS_HELP_STRING([--enable-timeout@<:@=seconds@:>@],[allow to boot 1st kernel after timeout in seconds @<:@default=no@:>@])], [
+AC_ARG_ENABLE([timeout],[AS_HELP_STRING([--enable-timeout@<:@=sec@:>@],[allow to boot 1st kernel after timeout in seconds @<:@default=no@:>@])], [
 	test "x$enable_timeout" = xyes && enable_timeout=10
 ],[enable_timeout=no])
 
-AC_ARG_ENABLE([bpp], [AS_HELP_STRING([--enable-bpp],[enable support of specified bpp modes (all,32,24,18,16,4,2,1)@<:@default=all@:>@])],
+AC_ARG_ENABLE([bpp], [AS_HELP_STRING([--enable-bpp@<:@=list@:>@],[enable support of specified bpp modes (all,32,24,18,16,4,2,1) @<:@default=all@:>@])],
 [
 	SIFS=${IFS}
 	IFS=','
@@ -43,10 +43,10 @@ AC_ARG_ENABLE([bpp], [AS_HELP_STRING([--enable-bpp],[enable support of specified
 ],
 [enable_all_bpp=yes])
 
-AS_IF([test "x$with_fbmenu" != xno],
+AS_IF([test "x$enable_fbui" != xno],
 		[
-		AC_DEFINE([USE_FBMENU], [1], [Define if you use the framebuffer menu])
-		AS_IF([test "x$with_icons" != xno],
+		AC_DEFINE([USE_FBMENU], [1], [Define if you use the framebuffer user interface])
+		AS_IF([test "x$enable_icons" != xno],
 			[
 			AC_DEFINE([USE_ICONS], [1], [Define if you want to parse and use custom icons])
 			],[])
@@ -96,12 +96,12 @@ AS_IF([test "x$with_fbmenu" != xno],
 			],[])
 		],[])
 
-AS_IF([test "x$with_cfgfiles" != xno],
+AS_IF([test "x$enable_cfgfiles" != xno],
 		[
 		AC_DEFINE([USE_CFGFILES], [1],[Define if you want to parse cfgfiles])
 		], [])
 
-AS_IF([test "x$with_static_linking" != xno],
+AS_IF([test "x$enable_static_linking" != xno],
 		[
 		GCC_FLAGS="$GCC_FLAGS -static"
 		], [])
@@ -121,22 +121,22 @@ AS_IF([test "x$enable_host_debug" = xyes],
 		AC_DEFINE([USE_HOST_DEBUG], [1], [Define if you wish to debug kexecboot right on host system])
 		], [])
 
-AS_IF([test "x$with_zaurus" = xyes],
+AS_IF([test "x$enable_zaurus" = xyes],
 		[
 		AC_DEFINE([USE_ZAURUS], [1], [Define if you wish to compile Sharp Zaurus specific code])
 		], [])
 
-AS_IF([test "x$with_zimage" = xyes],
+AS_IF([test "x$enable_zimage" = xyes],
 		[
 		AC_DEFINE([USE_ZIMAGE], [1], [Define if you wish to compile zImage kernel support])
 		], [])
 
-AS_IF([test "x$with_uimage" = xyes],
+AS_IF([test "x$enable_uimage" = xyes],
 		[
 		AC_DEFINE([USE_UIMAGE], [1], [Define if you wish to compile uImage kernel support])
 		], [])
 
-AS_IF([test "x$with_machine_kernel" = xyes],
+AS_IF([test "x$enable_machine_kernel" = xyes],
 		[
 		AC_DEFINE([USE_MACHINE_KERNEL], [1], [Define if you wish to enable looking for machine-specific zImage kernel])
 		], [])
