Add lots of autogenerated files to .gitignore
Signed-off-by: Dmitry Eremin-Solenikov <dbaryshkov@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@ Doxyfile
 *.test*
 res/orig
 *~
+*.o
+Makefile
+Makefile.in
+*.swp
+.deps/
+aclocal.m4
+autom4te.cache/
+config.guess
+config.h.in
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+kexecboot
+missing
+stamp-h1
