configure.ac: add a little bit of cross-compilation glue
Signed-off-by: Dmitry Eremin-Solenikov <dbaryshkov@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,6 @@
 AC_PREREQ(2.53)
 AC_INIT([kexecboot], [0.5.9], [kexecboot-devel@linuxtogo.org])
+AC_CANONICAL_HOST
 AM_INIT_AUTOMAKE([-Wall foreign])
 AC_CONFIG_SRCDIR(kexecboot.c)
 AM_CONFIG_HEADER(config.h)
