cfgparser.c boot.cfg: Make LABEL section delimiter
Now LABEL is section delimiter. If you have config file then it
must have LABEL item then.

--- a/boot.cfg
+++ b/boot.cfg
@@ -4,6 +4,7 @@
 # Copyright (c) 2009 Omegamoon
 #
 
+## First section
 # Show this label in kexecboot menu.
 #LABEL=My own image
 
@@ -24,3 +25,7 @@
 # Items with highest priority will be shown at top of menu.
 # Default: 0 (lowest, ordered by device ordering)
 #PRIORITY=10
+
+## Second section
+#LABEL=Other item
+#KERNEL=/boot/other-kernel
