boot.cfg: add missing newline and 'pivot-root' example
Signed-off-by: Andrea Adami <andrea.adami@gmail.com>

--- a/boot.cfg
+++ b/boot.cfg
@@ -5,24 +5,28 @@
 #
 
 ## First section
-# Show this label in kexecboot menu.
+# Show this label in kexecboot menu
 #LABEL=My own image
 
-# Specify full path to the kernel.
+# Specify full path to the kernel
 #KERNEL=/boot/my-own-kernel
 
-# Append this tags to the kernel cmdline.
+# Append this tags to the kernel cmdline after
+# mtdparts, root= and rootfstype= prepended by kexecboot
 #APPEND=logo.nologo debug
+
+# Force kexecboot settings to 'pivot-root' and boot a rootfs on another device
+#APPEND=console=/dev/tty0 root=/dev/sda3 rootfstype=ext3 debug
 
 # Use this initrd file
 #INITRD=/boot/my-own-initrd
 
 # Specify full path to the custom icon
-# that will be shown in kexecboot menu.
+# that will be shown in kexecboot menu
 #ICON=/boot/my-own-icon.xpm
 
-# Priority of item in kexecboot menu.
-# Items with highest priority will be shown at top of menu.
+# Priority of item in kexecboot menu
+# Items with highest priority will be shown at top of menu
 # Default: 0 (lowest, ordered by device ordering)
 #PRIORITY=10
 
