kexecboot: Add support for configuring device tree blob
Most current ARM devices need dtb option passed to kexec.

Signed-off-by: Tony Lindgren <tony@atomide.com>

--- a/boot.cfg
+++ b/boot.cfg
@@ -8,6 +8,9 @@
 # Show this label in kexecboot menu
 #LABEL=My own image
 
+# Specify which device tree blob to use
+#DTB=/boot/my-own-dtb
+
 # Specify full path to the kernel
 #KERNEL=/boot/my-own-kernel
 
