kexecboot: Add support for CMDLINE option
On some devices we don't want to use any of the original kernel
command line.
For example Motorola phones like droid 4 pass partition information and
Android specific initrd while the new kernels don't want any of that.

So let's add CMDLINE option in addition to APPEND option where CMDLINE does
not automatically modify the kernel command line while APPEND does.

Signed-off-by: Tony Lindgren <tony@atomide.com>

--- a/boot.cfg
+++ b/boot.cfg
@@ -21,6 +21,9 @@
 # Force kexecboot settings to 'pivot-root' and boot a rootfs on another device
 #APPEND=console=/dev/tty0 root=/dev/sda3 rootfstype=ext3 debug
 
+# Overwrite kernel command line instead of appending to it
+#CMDLINE=console=/dev/tty0 root=/dev/sdb1
+
 # Use this initrd file
 #INITRD=/boot/my-own-initrd
 
