Move all source files to src/ directory.
Move boot.cfg to res/ directory.

Signed-off-by: Marko Katic <dromede.gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ(2.53)
 AC_INIT([kexecboot], [0.6], [kexecboot-devel@linuxtogo.org])
 AC_CANONICAL_HOST
 AM_INIT_AUTOMAKE([-Wall foreign] [subdir-objects])
-AC_CONFIG_SRCDIR(kexecboot.c)
+AC_CONFIG_SRCDIR(src/kexecboot.c)
 AC_CONFIG_HEADERS(config.h)
 AM_MAINTAINER_MODE
 
@@ -234,4 +234,5 @@ AC_SUBST(GCC_FLAGS)
 
 AC_OUTPUT([
 Makefile
+src/Makefile
 ])
