--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,6 @@
-bin_PROGRAMS=kexecboot
+SUBDIRS = src
 
 AM_CFLAGS = $(GCC_FLAGS)
-
-kexecboot_SOURCES = util.c cfgparser.c devicescan.c evdevs.c fb.c gui.c \
-	 menu.c xpm.c rgb.c tui.c kexecboot.c fstype/fstype.c
 
 MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub configure \
 	depcomp install-sh ltmain.sh Makefile.in missing config.h.in
