Fix injection of compiler flags (static and debug)
With commit  d302547305727797e0172ba89e7519252c400021 a specific var
for the target CFLAGS was created thus AM_CFLAGS was not used anymore.
Append the AM_CFLAGS to it to get the expected behavior.

Signed-off-by: Andrea Adami <andrea.adami@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS=kexecboot
 
-kexecboot_CFLAGS = -I$(top_srcdir)
+kexecboot_CFLAGS = -I$(top_srcdir) $(AM_CFLAGS)
 
 kexecboot_SOURCES = \
 	util.c \
