define global variables in global.c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,7 @@ bin_PROGRAMS=kexecboot
 kexecboot_CFLAGS = -I$(top_srcdir) $(AM_CFLAGS)
 
 kexecboot_SOURCES = \
+	global.c \
 	util.c \
 	cfgparser.c \
 	devicescan.c \
